fix: change arrow space on mobile

--- a/src/templates/module_19_quoteimage/styles.less
+++ b/src/templates/module_19_quoteimage/styles.less
@@ -38,10 +38,14 @@
 	.icon {
 		position: absolute;
 		top: 50%;
-		left: -33px;
+		left: -23px; 
 		width: 13px;
 		transform: translateY(-50%);
 		fill: @s2-darkgrey;
+
+		@media @s2-mq-window-tablet {
+			left: -33px;
+		}
 	}
 		
 	.link {
